k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anondocs
  labels:
    name: anondocs
    app: anondocs-api
